--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ header {
 }
 
 header .logo img {
-    width: 150px;
+    width: 100px;
 }
 
 header nav ul {
@@ -112,4 +112,18 @@ footer {
 
 footer a {
     color: #fff;
+}
+
+
+/* Contact Section */
+
+.contact {
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 250px;
+    background: rgb(203, 200, 200);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
